AG-30432 Fix custom filter adding modal. #2715 #2697
Merge in EXTENSIONS/browser-extension from fix/AG-30432 to master

Squashed commit of the following:

commit 79de0161be21005328c579f44f002b4a8dbb8204
Merge: d297716ab 15bab4d1f
Author: Maxim Topciu <mtopciu@adguard.com>
Date:   Tue Feb 20 11:59:26 2024 +0200

    Merge branch 'master' into fix/AG-30432

commit d297716ab76ad853c9e1f43eac879b814c0b774e
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Feb 19 19:05:59 2024 +0200

    update changelog

commit cdc6d0a349375c1f6be65cf1db6f147c5f6e5b24
Merge: 973e1c99d 1b953d47b
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Feb 19 19:05:12 2024 +0200

    Merge branch 'master' into fix/AG-30432

commit 973e1c99d77c5a4324922495232651b2b542e67f
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Feb 19 16:11:29 2024 +0200

    fix long custom filter title mobile style

commit e56d053a96f6f2e1b7f2a305b6600deb28ba40d1
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Feb 19 15:58:06 2024 +0200

    fix AddCustomModal mobile style

--- a/Extension/src/pages/options/styles/common.pcss
+++ b/Extension/src/pages/options/styles/common.pcss
@@ -406,6 +406,10 @@ select:focus {
         background-color: var(--black)!important;
         border: 1px solid var(--gray900)!important;
     }
+
+    @media (min-width: 640px) {
+        width: 560px;
+    }
 }
 
 .ace_cursor {
